maxlik error better explained

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -4323,7 +4323,11 @@ $\Var(\langle Z, z\rangle)=1$; $\Cov(\hat Z_i, \hat Z_j)=v_i v_j \Var( \langle Z
 
 Метод моментов. Рассмотрим $Y_1$, $Y_2$, \ldots, $Y_n$. Величина $Y_i$ равна 1 если при втором отлове $i$-ый заяц оказался с бантом и 0 иначе.
 
-Метод моментов: $\E(Y_i)|_{n=\hat n}=\bar Y$:
+Метод моментов. Получаем теоретическое равенство:
+\[
+\E(\bar Y) = \E(Y_i) = \frac{100}{n}. 
+\]
+Заменяем на выборочный аналог:
 \[
 \frac{100}{\hat n_{MM}}=\bar Y
 \]
