lets's separate LR test

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -4448,8 +4448,8 @@ $[0.1;0.4]$. Как выглядит условное распределение
 \begin{problem}
   Пусть $Y_{1}$ и $Y_{2}$ независимы и распределены по Пуассону. Известно также, что $\E(Y_{1})=e^{a}$ и $\E(Y_{2})=e^{a+b}$.
 \begin{enumerate}
-\item Найдите ML оценки $\hat a$ и $\hat b$ для случая $y_1=7$ и $y_2=3$
-\item Найдите ML оценки $\hat a$ и $\hat b$ в общем виде
+\item Найдите ML оценки $\hat a$ и $\hat b$ для случая $y_1=7$ и $y_2=3$.
+\item Найдите ML оценки $\hat a$ и $\hat b$ в общем виде.
 \end{enumerate}
 
 
@@ -4871,7 +4871,7 @@ $\gamma = a$, $\beta = 1/\Var(\ell')$, $\E(u)=0$, $\Cov(u, \ell')=0$,
   \item Предположим, что количества мальчиков в каждой семье распределены биномиально 
   и независимо с общим параметром $p$.
   Оцените параметр $p$ методом максимального правдопдобия.
-  \item Постройте 99\%-е доверительный интервал для $p$. 
+  \item Постройте 99\%-й доверительный интервал для $p$. 
   \item Постройте 99\%-й доверительный интервал 
   для вероятности рождения ровно 6 мальчиков в семье с 12-ю детьми. 
   \item Сравните табличкой фактические частоты и прогнозируемые вероятности 
@@ -4907,7 +4907,39 @@ $\gamma = a$, $\beta = 1/\Var(\ell')$, $\E(u)=0$, $\Cov(u, \ell')=0$,
   \end{sol}
 \end{problem}
   
+\section{LR-тест}
 
+\begin{problem}
+ В ограниченной модели при верной $H_0$ предполагается, что наблюдаемые $Y_i$ независимы 
+ и нормально распределены $\cN(0; \sigma^2)$ с неизвестной дисперсией.
+ В неограниченной модели предполагается, что математическое ожидание $Y_i$ может равняться 
+ произвольной неизвестной константе $\mu$. 
+
+ По 200 наблюдениям известно, что $\bar Y = 5$, $\sum Y_i^2 = 1000$. 
+ Альтернативная гипотеза состоит в том, что $H_0$ неверна, но верна неограниченная модель. 
+
+  \begin{enumerate}
+    \item В предположении верности $H_0$ найдите ограниченные оценки метода максимального правдоподобия $\hat\mu_R$ и $\hat\sigma^2_R$.
+    \item Найдите неограниченные оценки метода максимального правдоподобия $\hat\mu_{UR}$ и $\hat\sigma^2_{UR}$.
+    \item Протестируйте гипотезу $H_0$ на уровне значимости $0.05$ с помощью $LR$-теста и $t$-теста.
+    \item При верной $H_0$ найдите $\plim \ln \frac{\hat \sigma^2_R}{\hat \sigma^2_{UR}}$.
+    \item Воспользовавшись тем, что $\ln (1+u) \approx u$ при малых $u$, найдите
+    \[
+    \plim \frac{LR_n}{T_n^2},  
+    \]
+    где $LR_n$ — $LR$-статистика по $n$ наблюдениям, а $T_n$ — $t$-статистика по $n$ наблюдениям.
+  \end{enumerate}
+
+  \begin{sol}
+  \[
+    \plim \ln \frac{\hat \sigma^2_R}{\hat \sigma^2_{UR}} = \ln 1 = 0.
+  \]
+  \[
+    LR_n = n\ln \frac{LR_n}{T_n^2} = n \ln \left( 1 + \frac{\hat \sigma^2_R - \hat\sigma^2_{UR}}{\hat \sigma^2_{UR}}   \right) \approx n \frac{\hat \sigma^2_R - \hat\sigma^2_{UR}}{\hat \sigma^2_{UR}}.
+  \]
+  \end{sol}
+  
+\end{problem}
 
 
 
