--- a/docs/arrow_impossibility.qmd
+++ b/docs/arrow_impossibility.qmd
@@ -72,9 +72,9 @@ $$
 На референдуме мы хотим выбрать упорядочить три алтернативы: А, Б и В. 
 Поэтому на референдуме каждого жителя ждут три вопроса.
 
-* Правда ли, что $A > B$?
-* Правда ли, что $B > C$?
-* Правда ли, что $C > A$?
+* Правда ли, что $A$ лучше $B$?
+* Правда ли, что $B$ лучше $C$?
+* Правда ли, что $C$ лучше $A$?
 
 Обозначим ответы горожан на первый вопрос вектором $x$, на второй — вектором $y$, на третий — вектором $z$.
 
@@ -191,6 +191,7 @@ $$
 Для произвольного количества жителей $n$ базис $B$ всех функций, заданных на векторах ответах жителей, состоит из $2^n$ функций. 
 Каждая функция базиса является перемножений некоторых $x_i$. 
 
+<--- TODO: надо ли? --->
 Для удобства обозначим элементы базиса $B$ покороче, упомянув перемножаемые номера $x_i$ в одном общем индексе. Например,
 $$
 x_{1, 2, 7} = x_1 x_2 x_7.
@@ -198,7 +199,95 @@ $$
 
 ## Разложение по базису
 
-Любую функцию общественного выбора $f$ можно разложить по базису $B$. Обозначим коэффициент перед $x_S$ как $\hat f_S$.
+Разложим для тренировки пару функций по базису $B$. 
+Первое разложение нам понадобится для доказательства, а второе — просто неплохое упражнение на понимание. 
+
+:::{.callout-note}
+## Упражнение
+
+Индикатор рациональности выбора $R(a, b, c)$ равна +1 для рационального выбора $(a, b, c)$ и 0 для нерационального выбора из трех одинаковых чисел, $R(1, 1, 1) = R(-1, -1, -1) =0$. 
+
+Разложите функцию $R$ по базису $B$. 
+:::
+
+:::{.callout-caution collapse="true"}
+## Решение упражнения про функцию рациональности
+
+В силу симметрии нам требуется найти всего лишь четыре константы: 
+$$
+R(x) = \alpha + \beta(x_1 + x_2 + x_3) + \gamma(x_1 x_2 + x_1 x_3 + x_2 x_4) + \delta x_1 x_2 x_3.
+$$
+
+Составляем четыре уравнения:
+$$
+\begin{cases} 
+R(1, 1, 1) = \alpha + 3\beta + 3\gamma + \delta = 0 \\
+R(-1, -1, -1) = \alpha - 3\beta + 3\gamma - \delta = 0 \\
+R(1, 1, -1) = \alpha + \beta - \gamma - \delta = 1 \\
+R(-1, -1, 1) = \alpha  - \beta - \gamma + \delta = 1 \\
+\end{cases}
+$$
+
+Замечаем, что функция чётная, поэтому $\beta = \delta = 0$.
+
+$$
+\begin{cases} 
+R(1, 1, 1) = \alpha + 3\gamma  = 0 \\
+R(1, 1, -1) = \alpha - \gamma  = 1 \\
+\end{cases}
+$$
+
+Получаем $\beta = \delta = 0$, $\gamma = -1/4$, $\alpha = 3/4$ и
+$$
+R(x) = 0.75 - 0.25(x_1 x_2 + x_1 x_3 + x_2 x_4).
+$$
+:::
+
+
+
+:::{.callout-note}
+## Упражнение
+
+Рассмотрим город из трёх жителей и *мажоритарную* функцию общественного выбора $M(x_1, x_2, x_3)$. 
+Мажоритарная функция функция $M$ выбирает тот ответ, которые выбрало большинство жителей города.
+
+1. Разложите функцию $M$ по базису $B$.
+
+2. Является ли функция $M$ рациональной?
+:::
+
+
+:::{.callout-caution collapse="true"}
+## Решение упражнения про мажоритарную функцию
+
+В силу симметрии нам требуется найти всего лишь четыре константы: 
+$$
+M(x) = \alpha + \beta(x_1 + x_2 + x_3) + \gamma(x_1 x_2 + x_1 x_3 + x_2 x_4) + \delta x_1 x_2 x_3.
+$$
+
+Если помножить на (-1) выбор каждого жителя, выбор города множится на (-1).
+Получается, что функция $M$ нечётная, поэтому $\alpha = \gamma = 0$. 
+
+Составляем два уравнения:
+$$
+\begin{cases} 
+M(1, 1, 1) = 3\beta + \delta = 1 \\
+M(1, 1, -1) = \beta  - \delta = 1 \\
+\end{cases}
+$$
+
+
+Получаем $\beta = 0.5$, $\delta = -0.5$, $\gamma = 0$, $\alpha = 0$ и
+$$
+M(x) = 0.5(x_1 + x_2 + x_3) - 0.5x_1 x_2 x_3.
+$$
+:::
+
+
+
+
+Теперь разложим по базису $B$ произвольную  функцию общественного выбора $f$. 
+Обозначим коэффициент перед $x_S$ как $\hat f_S$.
 
 $$
 f  =  \hat f_{\emptyset} \cdot 1 + \hat f_1 \cdot x_1 + \ldots + \hat f_{1,2,7} x_{1,2,7} + \ldots 
@@ -208,9 +297,113 @@ $$
 $$
 f = \sum_S \hat f_S x_S,
 $$
-где $S$ пробегает все подмножества чисел от $1$ до $n$. 
+где подмножество $S$ — часть множества натуральных чисел от $1$ до $n$, $S \subset \{1, 2, \ldots, n\}$.
 
-Теорему Эрроу можно переформулировать. В разложении по базису $B$ рациональной единогласной функции общественного выбора все коэффициенты за одним исключением равны 0. Единственный ненулевой коэффициент это некое $\hat f_i = 1$. 
+Теперь теорему Эрроу можно переформулировать на языке линейной алгебры. 
+
+:::{.callout-note}
+## Переформулировка теоремы Эрроу о диктаторе
+
+В разложении по базису $B$ рациональной единогласной функции общественного выбора $f$ все коэффициенты за одним исключением равны 0. Единственный ненулевой коэффициент это некое $\hat f_i = 1$.
+:::
+
+
+## На охоту за коэффициентами 
+
+
+В теории рядов Фурье известно *тождество Парсеваля*.
+
+:::{.callout-note}
+## Тождество Парсеваля 
+
+$$
+1=\langle f, f\rangle = \sum_S \hat f_S^2
+$$
+:::
+
+:::{.callout-caution collapse="true"}
+## Доказательство тождество Парсеваля
+
+
+Вспомним, что скалярное произведение $\langle f, f\rangle$ считается как ожидание $\E(f(X)f(X))$ в случайном векторе $X$, 
+компоненты которого равновероятно равны (-1) и (+1).
+
+Замечаем, что $f(X)f(X) = 1$, поэтому $\langle f, f\rangle = 1$.
+
+Разложим внутри скалярного произведения каждую $f$ по базису
+$$
+\langle \sum_S \hat f_S x_S, \sum_Q \hat f_Q x_Q \rangle = 1
+$$
+
+Раскрываем скобки и вспоминаем, что наш базис — ортонормальный, $\langle x_S, x_Q \rangle = 0$, если подмножества $S$ и $Q$ не совпадают, а $\langle x_S, x_S \rangle = 1$.
+
+Тем самым,
+$$
+1=\langle f, f\rangle = \sum_S \hat f_S^2
+$$
+:::
+
+Мы доказали, что квадраты коэффициентов $\hat f_S^2$ в сумме дают единицу. 
+Заметим, что мажоритарная функция из упражнения удовлетворяет этому критерию, $0.5^2 + 0.5^2 + 0.5^2 + (-0.5)^2=1$.
+
+
+
+## Почти все коэффициенты разложения — нули
+
+Теперь мы готовы доказать, что все коэффициенты помимо коэффициентов при отдельных $x_i$ равны нулю, то есть, что 
+функция $f$ имеет всего лишь вид
+$$
+f(x) = \alpha_1 x_1 + \alpha_2 x_2 + \ldots +\alpha_n x_n,
+$$
+а более сложные слагаемые вида $x_1 x_7$, $x_2 x_5 x_9$ отсутствуют. 
+
+...
+тут дописать
+...
+
+
+## Ищем диктатора
+
+Итак, мы доказали, что функция $f$ имеет вид 
+$$
+f(x) = \alpha_1 x_1 + \alpha_2 x_2 + \ldots +\alpha_n x_n.
+$$
+
+Заметим, что $f$ принимает только значения $(-1)$ и $(+1)$, 
+поэтому при изменении любого $x_i$ с (-1) до (+1) функция $f$ либо не должна измениться совсем,
+либо должна измениться ровно на 2. 
+
+Следовательно, каждое $\alpha_i$ может принимать только значения $0$, $-1$ или $1$.
+
+Из равенства Парсеваля следует, что $\sum \alpha_i^2=1$, поэтому ровно одно $\alpha_i$ отлично от нуля.
+По аксиоме единигласия это $\alpha_i = 1$.
+
+Ура, мы доказали, теорему Эрроу. 
+Любая рациональная единогласная функция общественного выбора является диктаторской, и имеет вид
+$$
+f(x) = x_i.
+$$
+
+У Джеймса Мерфи в [@murphy2015arrow] этот кусок доказательства концептуально сложней, но трюк настолько виртуозен, что его стоит повторить. 
+
+
+
+
+
+
+
+# Насколько нерационально правило простого большинства?
+
+....
+
+## Источники
+
+В основном изложение следует статье [@murphy2015arrow]. 
+Немного упростил поиск коэффициентов в функции рациональности и участок доказательства с равенством нулю всех $\alpha_i$ кроме одного, добавил больше примеров. 
+
+На Бесконечной салфетке Эвана Чена [@chen2016infinitely] есть похожее доказательство. 
+И это классный повод взглянуть в этот шикарный текст, если читатель его ещё не видел. 
+
 
 
 
