--- a/docs/references.bib
+++ b/docs/references.bib
@@ -12,3 +12,20 @@
   publisher={OTexts}
 }
 
+
+@article{murphy2015arrow,
+  title={ARROW’S THEOREM BY BOOLEAN FOURIER ANALYSIS},
+  author={Murphy III, James T},
+  year={2015},
+  url={https://intfxdx.com/downloads/arrow-boolean-fourier-2015.pdf}
+}
+
+
+@misc{chen2016infinitely,
+  title={An infinitely large napkin},
+  author={Chen, Evan},
+  year={2016},
+  publisher={Cambridge, Massachusetts: Massachusetts Institute of Technology},
+  url={https://github.com/vEnhance/napkin/}
+}
+
