--- a/docs/references.bib
+++ b/docs/references.bib
@@ -12,6 +12,16 @@
   publisher={OTexts}
 }
 
+@article{Chin2022ASA,
+  title={A Short and Elementary Proof of the Central Limit Theorem by Individual Swapping},
+  author={Calvin Wooyoung Chin},
+  journal={The American Mathematical Monthly},
+  year={2022},
+  volume={129},
+  url={https://arxiv.org/abs/2106.00871},
+  pages={374 - 380}
+}
+
 
 @article{murphy2015arrow,
   title={ARROW’S THEOREM BY BOOLEAN FOURIER ANALYSIS},
