--- a/docs/clt_by_swapping.qmd
+++ b/docs/clt_by_swapping.qmd
@@ -144,34 +144,44 @@ $$
 $$
 \sum_{i=1}^n X_i = Z_{n,n} \overset{-X_n}{\longrightarrow}S_{n,n}\overset{+Y_n}{\longrightarrow}Z_{n,n-1}\overset{-X_{n-1}}{\longrightarrow} \ldots \overset{-X_2}{\longrightarrow}S_{n,2}\overset{+Y_2}{\longrightarrow}Z_{n,1}\overset{-X_1}{\longrightarrow}S_{n,1}\overset{+Y_1}{\longrightarrow}Z_{n,0}=\sum_{i=1}^n Y_i
 $$
-
+В схеме $n$ шагов, каждый из которых состоит из двух полушагов, удаления $X_i$ и добавления $Y_i$.
 
 Заметим, что $S_{n,i}$ не зависит ни от $X_i$, ни от $Y_i$. Это пригодится. 
 
 Замечаем также, что $Z_{n,0} = Y_1 + \ldots + Y_n \sim \cN(0;1)$.
 
-В силу леммы нам достаточно доказать, что для любой трижды дифференцируемой $h$ с конечной третьей производной $\E(h(Z_{n,n})) \to \E(h(Z_{n,0}))$.
+В силу леммы нам достаточно доказать, что для любой трижды дифференцируемой $h$ с ограниченными тремя производными $\E(h(Z_{n,n})) \to \E(h(Z_{n,0}))$.
 
 Поехали. Выбираем произвольное положительное $\varepsilon$. Наша цель — доказать, что начиная с некоторого $n$ отличие этих двух ожиданий невелико,
 $$
 \abs{\E(h(Z_{n,n})) - \E(h(Z_{n,0}))} < \varepsilon.
 $$
 
-
-Если мы докажем, что начиная с некоторого $n$ *каждая* мелкая разница $\abs{\E(h(Z_{n,i})) - \E(h(Z_{n,i-1}))}$ меньше $\varepsilon/n$, то дело будет в шляпе! 
-
-Остановимся на первой мелкой разнице, 
+Посмотрим на нашу схему подмен
 $$
-h(Z_{n,n}) - h(Z_{n,n-1}) = h(X_1 + X_2 +\ldots + X_{n-1} + X_n) - h(X_1 + X_2 +\ldots + X_{n-1} + Y_n).
+h\left(\sum_{i=1}^n X_i\right)=h(Z_{n,n}) \overset{-X_n}{\longrightarrow}h(S_{n,n})\overset{+Y_n}{\longrightarrow}h(Z_{n,n-1})\overset{-X_{n-1}}{\longrightarrow} \ldots \overset{+Y_2}{\longrightarrow}h(Z_{n,1})\overset{-X_1}{\longrightarrow}h(S_{n,1})\overset{+Y_1}{\longrightarrow}h(Z_{n,0})=h\left(\sum_{i=1}^n Y_i\right)
 $$
-Доказательство для других случаев полностью аналогично. 
 
-Наша разница $h(Z_{n,n}) - h(Z_{n,n-1})$ теперь разбивается в две промежуточных разницы,
+
+С ростом $n$ цепочка растет, а каждый шаг по идее должен становится всё меньше. 
+Если мы докажем, что начиная с некоторого $n$ разница
+$$
+\abs{\E(h(Z_{n,i})) - \E(h(Z_{n,i-1}))}
+$$ 
+от **каждого** шага становится меньше $\varepsilon/n$, то дело будет в шляпе! 
+
+Остановимся на первой паре полушагов, 
+$$
+h(Z_{n,n}) \overset{-X_n}{\longrightarrow}h(S_{n,n})\overset{+Y_n}{\longrightarrow}h(Z_{n,n-1})
+$$
+Доказательство для других пар полушагов полностью аналогично. 
+
+Наша разница $h(Z_{n,n}) - h(Z_{n,n-1})$ разбивается в два полушага,
 $$
 \E h(Z_{n,n}) - \E h(Z_{n,n-1}) = \left(\E h(Z_{n,n}) - \E h(S_{n,n}) \right) - \left(\E h(Z_{n,n-1}) - \E h(S_{n,n}) \right).
 $$
 
-Оказывается, что обе промежуточных разницы, $\left(\E h(Z_{n,n}) - \E h(S_{n,n}) \right)$ и $\left(\E h(Z_{n,n-1}) - \E h(S_{n,n}) \right)$, очень похожи на константу $\E\left(\frac{h''(S_{n,n})}{2!}\right)$. И начиная с некоторого $n$ отличие каждой промежуточной разницы от этой константы будет меньше $\varepsilon/2n$.
+Оказывается, что обе промежуточных разницы, $\left(\E h(Z_{n,n}) - \E h(S_{n,n}) \right)$ и $\left(\E h(Z_{n,n-1}) - \E h(S_{n,n}) \right)$, очень похожи на константу $\E\left(\frac{h''(S_{n,n})}{2!}\right)$. И начиная с некоторого $n$ отличие каждой промежуточной разницы от этой константы будет меньше $\varepsilon/2n$. При взятии разницы константа $\E\left(\frac{h''(S_{n,n})}{2!}\right)$ уничтожится, и разница для целого шага окажется меньше $\varepsilon/n$. 
 
 Проведем доказательство для первой из них, $\left(\E h(Z_{n,n}) - \E h(S_{n,n}) \right)$. Доказательство для второй $\left(\E h(Z_{n,n-1}) - \E h(S_{n,n}) \right)$ аналогично. 
 
@@ -220,7 +230,7 @@ $$
 Подберем $n$ настолько большим, что $\E(X_n^2 I(\abs{X_n} > \delta)) < \varepsilon/2M$. 
 
 
-Вспомним наш долгий путь. Сначала мы разбили разницу $h(Z_{n,n}) - h(Z_{n,0})$ на $n$ шагов, каждый шаг состоял в подмене очередного $X_i$ на аналогичный нормально распределенный $Y_i$. Затем каждый шаг мы разбили на два полушага, удаление $X_i$ и добавление $Y_i$. Затем мы рассмотрели для каждого полушага два подслучая, в зависимости от того, что больше $\abs X_i$ или $\delta$. 
+Вспомним наш долгий путь. Сначала мы разбили разницу $h(Z_{n,n}) - h(Z_{n,0})$ на $2n$ полушагов. Каждый шаг состоит из полушага удаления $X_i$ и полушага добавления $Y_i$. Затем мы рассмотрели для каждого полушага два подслучая, в зависимости от того, что больше $\abs X_i$ или $\delta$. 
 
 ## Источники
 
