--- a/docs/clt_by_swapping.qmd
+++ b/docs/clt_by_swapping.qmd
@@ -27,11 +27,12 @@ $$
  \newcommand\Var{{\mathrm{Var}}}
  \newcommand\Cov{{\mathrm{Cov}}}
  \newcommand\Corr{{\mathrm{Corr}}}
+ \newcommand{\abs}[1]{\left\lvert #1 \right \rvert}
 $$
 :::
 
 
-
+Перед доказательством ЦПТ нам потребуется лемма. Эта лемма позволяет от пределов вероятностей перейти к изучению пределов ожиданий гладких функций. Казалось бы, вероятности проще. Однако для гладких функций применима мощнейшая идея разложения в ряд Тейлора.
 
 :::{.callout-note}
 ## Лемма
@@ -101,6 +102,10 @@ $$
 
 :::
 
+# Формулировка цпт
+
+Вспомним одну из формулировок ЦПТ.
+
 :::{.callout-note}
 ## Центральная предельная теорема
 
@@ -112,12 +117,15 @@ $$
 :::
 
 
-Доказательство. 
+# Доказательство
+
 Для начала представим $S_n$ в виде отмасштабированных слагаемых. 
 $$
 Z_n = \frac{Q_1 - \mu}{\sigma \sqrt n} + \ldots + \frac{Q_{n-1} - \mu}{\sigma \sqrt n} + \frac{Q_n - \mu}{\sigma \sqrt n} = X_1 + \ldots + X_{n-1} + X_n
 $$
 Замечаем, что $\E(X_i) = 0$, $\Var(X_i) = 1/n$.
+
+## Идея постепенной подмены слагаемых
 
 Теперь потихоньку начнем менять слагаемые в правом хвосте на независимые слагаемые $Y_i$ с таким же нулевым ожиданием, такой же дисперсией $1/n$, но нормально распределенные:
 
@@ -152,9 +160,11 @@ $$
 
 В силу леммы нам достаточно доказать, что для любой трижды дифференцируемой $h$ с ограниченными тремя производными $\E(h(Z_{n,n})) \to \E(h(Z_{n,0}))$.
 
+## Выбираем произвольное эпсилон
+
 Поехали. Выбираем произвольное положительное $\varepsilon$. Наша цель — доказать, что начиная с некоторого $n$ отличие этих двух ожиданий невелико,
 $$
-\abs{\E(h(Z_{n,n})) - \E(h(Z_{n,0}))} < \varepsilon.
+\E(h(Z_{n,n})) - \E(h(Z_{n,0})) \in [-\varepsilon;+\varepsilon].
 $$
 
 Посмотрим на нашу схему подмен
@@ -166,9 +176,11 @@ $$
 С ростом $n$ цепочка растет, а каждый шаг по идее должен становится всё меньше. 
 Если мы докажем, что начиная с некоторого $n$ разница
 $$
-\abs{\E(h(Z_{n,i})) - \E(h(Z_{n,i-1}))}
+\E(h(Z_{n,i})) - \E(h(Z_{n,i-1}))
 $$ 
-от **каждого** шага становится меньше $\varepsilon/n$, то дело будет в шляпе! 
+от **каждого** шага становится по модулю меньше $\varepsilon/n$, то дело будет в шляпе! 
+
+## Анализ первой пары полушагов
 
 Остановимся на первой паре полушагов, 
 $$
@@ -181,11 +193,13 @@ $$
 \E h(Z_{n,n}) - \E h(Z_{n,n-1}) = \left(\E h(Z_{n,n}) - \E h(S_{n,n}) \right) - \left(\E h(Z_{n,n-1}) - \E h(S_{n,n}) \right).
 $$
 
-Оказывается, что обе промежуточных разницы, $\left(\E h(Z_{n,n}) - \E h(S_{n,n}) \right)$ и $\left(\E h(Z_{n,n-1}) - \E h(S_{n,n}) \right)$, очень похожи на константу $\E\left(\frac{h''(S_{n,n})}{2!}\right)$. И начиная с некоторого $n$ отличие каждой промежуточной разницы от этой константы будет меньше $\varepsilon/2n$. При взятии разницы константа $\E\left(\frac{h''(S_{n,n})}{2!}\right)$ уничтожится, и разница для целого шага окажется меньше $\varepsilon/n$. 
+Оказывается, что обе промежуточных разницы, $\left(\E h(Z_{n,n}) - \E h(S_{n,n}) \right)$ и $\left(\E h(Z_{n,n-1}) - \E h(S_{n,n}) \right)$, очень похожи на некоторую общую константу. Эта константа окажется равной $\E\left(\frac{h''(S_{n,n})}{2!}\right)$, но это не важно. Важно, что начиная с некоторого $n$ отличие каждой промежуточной разницы от этой константы будет меньше $\varepsilon/2n$. Константа уничтожится, и разница для целого шага окажется меньше $\varepsilon/n$. 
 
 Проведем доказательство для первой из них, $\left(\E h(Z_{n,n}) - \E h(S_{n,n}) \right)$. Доказательство для второй $\left(\E h(Z_{n,n-1}) - \E h(S_{n,n}) \right)$ аналогично. 
 
 В этот момент можно уже не писать индекс $(n,n)$ у $Z$ и $S$ :)
+
+## Линеаризация разницы для полушага
 
 Выполним линеаризацию функции $h(Z_{n,n})$ в окрестности точки $S_{n,n}$. Заметим предварительно, что эти точки отличаются ровно на $X_n$, $Z_{n,n} = S_{n,n} + Z_n$.
 $$
@@ -208,7 +222,9 @@ $$
 $$
 \E h(Z_{n,n}) - \E h(S_{n,n}) = 0 + \E\left(\frac{h''(S_{n,n})}{2!}\right) + \E\left(\frac{h''(C) - h''(S_{n,n})}{2!}X_n^2\right).
 $$
-Сосредоточимся на последнем слагаемом и рассмотрим два случая, в зависимости от того, больше ли $\abs X_n$ чем $\delta$.
+## Два случая для сложного слагаемого
+
+Сосредоточимся на последнем слагаемом и рассмотрим два случая, в зависимости от того, больше ли $\abs{X_n}$ чем $\delta$.
 $$
 \frac{h''(C) - h''(S_{n,n})}{2!}X_n^2 = \left(\frac{h''(C) - h''(S_{n,n})}{2!}X_n^2I(\abs{X_n} \leq \delta)\right) + \left(\frac{h''(C) - h''(S_{n,n})}{2!}X_n^2I(\abs{X_n} > \delta)\right).
 $$
@@ -219,18 +235,50 @@ $$
 
 Получаем ограничение для первого слагаемого,
 $$
-\E\abs\left(\frac{h''(C) - h''(S_{n,n})}{2!}X_n^2I(\abs{X_n} \leq \delta)\right) \leq E\left(\frac{\varepsilon}{4}X_n^2\right)=\frac{\varepsilon}{4n}
+\E\abs{\frac{h''(C) - h''(S_{n,n})}{2!}X_n^2I(\abs{X_n} \leq \delta)} \leq E\left(\frac{\varepsilon}{4}X_n^2\right)=\frac{\varepsilon}{4n}
 $$
 Изучаем второе слагаемое. У функции $h$ ограничена вторая производная константой $M$.
 
 $$
-\E\abs\left(\frac{h''(C) - h''(S_{n,n})}{2!}X_n^2I(\abs{X_n} > \delta)\right) \leq E\left(\frac{M + M}{4}X_n^2I(\abs{X_n} > \delta)\right)=\frac{M}{2n}\E(X_n^2I(\abs{X_n} > \delta))
+\E\abs{\frac{h''(C) - h''(S_{n,n})}{2!}X_n^2I(\abs{X_n} > \delta)} \leq E\left(\frac{M + M}{4}X_n^2I(\abs{X_n} > \delta)\right)=\frac{M}{2n}\E(X_n^2I(\abs{X_n} > \delta))
 $$
 
-Подберем $n$ настолько большим, что $\E(X_n^2 I(\abs{X_n} > \delta)) < \varepsilon/2M$. 
+Подберем $n$ настолько большим, что $\E(X_n^2 I(\abs{X_n} > \delta)) < \varepsilon/2M$. При этом второе слагаемое будет также ограничено величиной $\varepsilon/4n$. Тем самым мы доказали, что начиная с некоторого $n$
+$$
+\E\abs{\frac{h''(C) - h''(S_{n,n})}{2!}X_n^2 } \leq \frac{\varepsilon}{4n} + \frac{\varepsilon}{4n} = \frac{\varepsilon}{2n}
+$$
+То есть,
+$$
+\E h(Z_{n,n}) - \E h(S_{n,n}) \in \left[ \E\left(\frac{h''(S_{n,n})}{2!}\right) - \frac{\varepsilon}{2n}; \E\left(\frac{h''(S_{n,n})}{2!}\right) + \frac{\varepsilon}{2n} \right].
+$$
+В силу того, что аналогичное диапазон верен для $\E h(Z_{n,n-1}) - \E h(S_{n,n})$, получаем 
+$$
+\E h(Z_{n,n}) - \E h(Z_{n,n-1}) \in \left[ - \frac{\varepsilon}{n}; + \frac{\varepsilon}{n} \right].
+$$
+
+## Взгляд назад
+
+Вспомним наш долгий путь. Сначала мы разбили разницу $h(Z_{n,n}) - h(Z_{n,0})$ на $2n$ полушагов. Каждый шаг состоит из полушага удаления $X_i$ и полушага добавления $Y_i$. Затем мы рассмотрели для полушага два подслучая, в зависимости от того, что больше $\abs X_i$ или $\delta$. 
 
 
-Вспомним наш долгий путь. Сначала мы разбили разницу $h(Z_{n,n}) - h(Z_{n,0})$ на $2n$ полушагов. Каждый шаг состоит из полушага удаления $X_i$ и полушага добавления $Y_i$. Затем мы рассмотрели для каждого полушага два подслучая, в зависимости от того, что больше $\abs X_i$ или $\delta$. 
+:::{.callout-caution collapse="true"}
+## Упражнение к теореме
+
+Докажите, что для любого $\varepsilon$ начиная  с некоторого $n$ выполнено условие 
+
+$$
+\E h(Z_{n,n-1}) - \E h(S_{n,n}) \in \left[ \E\left(\frac{h''(S_{n,n})}{2!}\right) - \frac{\varepsilon}{2n}; \E\left(\frac{h''(S_{n,n})}{2!}\right) + \frac{\varepsilon}{2n} \right].
+$$
+:::
+
+:::{.callout-caution collapse="true"}
+## Решение упражнения к теореме
+
+Линеаризовать также надо в окрестности точки $S_{n,n}$, а разница $Z_{n,n-1}-S_{n,n}$ окажется равной $Y_n$. По ожиданию и дисперсии $Y_n$ ничем не отличается от $X_n$. Поэтому остаётся лишь полностью скопировать доказательство с заменой $X_n$ на $Y_n$.
+:::
+
+
+
 
 ## Источники
 
