--- a/docs/clt_by_swapping.qmd
+++ b/docs/clt_by_swapping.qmd
@@ -31,24 +31,28 @@ $$
 $$
 :::
 
+Центральная предельная теорема (ЦПТ) обещает нам, что сумма независимых одинаково распределенных слагаемых примерно нормально распределена. Для аккуратной формулировки и доказательства вспомним сначала определение сходимости по распределению. 
 
-Перед доказательством ЦПТ нам потребуется лемма. Эта лемма позволяет от пределов вероятностей перейти к изучению пределов ожиданий гладких функций. Казалось бы, вероятности проще. Однако для гладких функций применима мощнейшая идея разложения в ряд Тейлора.
+:::{.callout-note}
+## Сходимость по распределению
+
+Последовательность случайных величин $(R_n)$ сходится к $R$ по распределению, если 
+$$
+\lim_{n\to\infty} \P(R_n \leq x) = \P(R\leq x) = F(x),
+$$
+в любой точке $x$, где функция распределения $F$ величины $R$ непрерывна. 
+:::
+
+Перед доказательством ЦПТ нам потребуется лемма. Эта лемма позволяет от пределов вероятностей перейти к изучению пределов ожиданий гладких функций. Казалось бы, вероятности проще, чем ожидания, да ещё каких-то ненаписанных явно гладких функций! Однако для гладких функций применима мощнейшая идея разложения в ряд Тейлора.
 
 :::{.callout-note}
 ## Лемма
 
-Если для любой трижды дифференцируемой действительной функций $h$ с ограниченными тремя производными выполнено условие 
+Для того, чтобы последовательность случайных величин $(R_n)$ сходилась к $R$ по распределению достаточно того, что для любой бесконечно дифференцируемой функций $h$ с ограниченными производными выполнено условие 
 $$
-\lim_{n\to\infty} \E(h(R_n)) = \E(h(R)),
+\lim_{n\to\infty} \E(h(R_n)) = \E(h(R)).
 $$
-то последовательность случайных величин $(R_n)$ сходится к $R$ по распределению, то есть,
-$$
-\lim_{n\to\infty} \P(R_n \leq x) = \P(R\leq x),
-$$
-для любой точки $x$, в которой функция распределения $F$ величины $R$ непрерывна. 
 :::
-
-
 
 :::{.callout-caution collapse="true"}
 ## Доказательство леммы
@@ -66,7 +70,7 @@ $$
 
 Отступим от точки $x$ чуть-чуть влево, в точку $x - \delta$. В силу непрерывности $F$ в точке $x$ размер оступа $\delta$ можно выбрать так, что $F(x-\delta) > F(x) - \varepsilon/2$. 
 
-Теперь придумаем трижды дифференцируемую функцию $h$, которая чуть-чуть занижает индикатор $I(R_n \leq x)$. А именно, левее $x-\delta$ функция $h$ равна 1, правее $x$ функция $h$ равна нулю, а на отрезке $[x-\delta, x]$ функция $h$ плавно спускается от 1 к 0. По построению, 
+Теперь придумаем гладкую функцию $h$, которая чуть-чуть занижает индикатор $I(R_n \leq x)$. А именно, левее $x-\delta$ функция $h$ равна 1, правее $x$ функция $h$ равна нулю, а на отрезке $[x-\delta, x]$ функция $h$ плавно спускается от 1 к 0. По построению, 
 $$
 I(R_n \leq x - \delta) \leq h(R_n) \leq I(R_n \leq x).
 $$
@@ -89,7 +93,15 @@ $$
 Аналогично доказывается и вторая половина. На этот раз надо отступать от $x$ вправо в точку $x+\delta$, и заменять индикатор $I(R_n \leq x)$ мажорирующей его гладкой функцией $h$.  
 :::
 
+По доказательству видно, что лемма остается верна, если расширить класс функций до просто непрерывных или до трижды дифференцируемых с конечными производными. 
 
+При желании можно сконструировать используемую в доказательстве функцию $h$ явно, например, на базе бесконечно плавно стартующей из нуля функции
+$$
+g(t) = \begin{cases}
+\exp(1/t) \text{ при } t>0, \\
+0, \text{ при } t\leq 0.
+\end{cases}
+$$
 
 :::{.callout-caution collapse="true"}
 ## Упражнение к лемме
@@ -158,7 +170,7 @@ $$
 
 Замечаем также, что $Z_{n,0} = Y_1 + \ldots + Y_n \sim \cN(0;1)$.
 
-В силу леммы нам достаточно доказать, что для любой трижды дифференцируемой $h$ с ограниченными тремя производными $\E(h(Z_{n,n})) \to \E(h(Z_{n,0}))$.
+В силу леммы нам достаточно доказать, что для любой бесконечно дифференцируемой $h$ с ограниченными производными $\E(h(Z_{n,n})) \to \E(h(Z_{n,0}))$.
 
 ## Выбираем произвольное эпсилон
 
