--- a/docs/clt_by_swapping.qmd
+++ b/docs/clt_by_swapping.qmd
@@ -38,7 +38,7 @@ $$
 
 Последовательность случайных величин $(R_n)$ сходится к $R$ по распределению, если 
 $$
-\lim_{n\to\infty} \P(R_n \leq x) = \P(R\leq x) = F(x),
+\lim_{n\to\infty} \P(R_n \leq x) = \P(R\leq x) = F(x)
 $$
 в любой точке $x$, где функция распределения $F$ величины $R$ непрерывна. 
 :::
@@ -205,15 +205,15 @@ $$
 \E h(Z_{n,n}) - \E h(Z_{n,n-1}) = \left(\E h(Z_{n,n}) - \E h(S_{n,n}) \right) - \left(\E h(Z_{n,n-1}) - \E h(S_{n,n}) \right).
 $$
 
-Оказывается, что обе промежуточных разницы, $\left(\E h(Z_{n,n}) - \E h(S_{n,n}) \right)$ и $\left(\E h(Z_{n,n-1}) - \E h(S_{n,n}) \right)$, очень похожи на некоторую общую константу. Эта константа окажется равной $\E\left(\frac{h''(S_{n,n})}{2!}\right)$, но это не важно. Важно, что начиная с некоторого $n$ отличие каждой промежуточной разницы от этой константы будет меньше $\varepsilon/2n$. Константа уничтожится, и разница для целого шага окажется меньше $\varepsilon/n$. 
+Заглянем в будущее, чтобы осознать план действий. Оказывается, что обе полушаговых разницы, $\left(\E h(Z_{n,n}) - \E h(S_{n,n}) \right)$ и $\left(\E h(Z_{n,n-1}) - \E h(S_{n,n}) \right)$, очень похожи на некоторую общую величину. Эта величина окажется равной $\E\left(\frac{h''(S_{n,n})}{2n}\right)$, но это не важно. Важно, что начиная с некоторого $n$ отличие каждой полушаговой разницы от этой общей величины будет меньше $\varepsilon/2n$. При вычитании двух разниц общая величина уничтожится, и разница для целого шага окажется по модулю меньше $\varepsilon/n$. 
 
-Проведем доказательство для первой из них, $\left(\E h(Z_{n,n}) - \E h(S_{n,n}) \right)$. Доказательство для второй $\left(\E h(Z_{n,n-1}) - \E h(S_{n,n}) \right)$ аналогично. 
+Проведем доказательство для разницы первого полушага, $\left(\E h(Z_{n,n}) - \E h(S_{n,n}) \right)$. Доказательство для разницы второго полушага, $\left(\E h(Z_{n,n-1}) - \E h(S_{n,n}) \right)$, аналогично. 
 
 В этот момент можно уже не писать индекс $(n,n)$ у $Z$ и $S$ :)
 
 ## Линеаризация разницы для полушага
 
-Выполним линеаризацию функции $h(Z_{n,n})$ в окрестности точки $S_{n,n}$. Заметим предварительно, что эти точки отличаются ровно на $X_n$, $Z_{n,n} = S_{n,n} + Z_n$.
+Выполним линеаризацию функции $h(Z_{n,n})$ в окрестности точки $S_{n,n}$. Заметим предварительно, что эти точки отличаются ровно на $X_n$, $Z_{n,n} = S_{n,n} + X_n$.
 $$
 h(Z_{n,n}) \approx h(S_{n,n}) + h'(S_{n,n})(Z_{n,n} - S_{n,n}) = h(S_{n,n}) + h'(S_{n,n}) X_n.
 $$
@@ -232,7 +232,7 @@ $$
 
 Берём математическое ожидание, вспомнив, что $\E(X_n) =0$, $\Var(X_n)= 1/n$, а $X_n$ не зависит от $S_n$,
 $$
-\E h(Z_{n,n}) - \E h(S_{n,n}) = 0 + \E\left(\frac{h''(S_{n,n})}{2!}\right) + \E\left(\frac{h''(C) - h''(S_{n,n})}{2!}X_n^2\right).
+\E h(Z_{n,n}) - \E h(S_{n,n}) = 0 + \E\left(\frac{h''(S_{n,n})}{2n}\right) + \E\left(\frac{h''(C) - h''(S_{n,n})}{2}X_n^2\right).
 $$
 ## Два случая для сложного слагаемого
 
@@ -261,7 +261,7 @@ $$
 $$
 То есть,
 $$
-\E h(Z_{n,n}) - \E h(S_{n,n}) \in \left[ \E\left(\frac{h''(S_{n,n})}{2!}\right) - \frac{\varepsilon}{2n}; \E\left(\frac{h''(S_{n,n})}{2!}\right) + \frac{\varepsilon}{2n} \right].
+\E h(Z_{n,n}) - \E h(S_{n,n}) \in \left[ \E\left(\frac{h''(S_{n,n})}{2n}\right) - \frac{\varepsilon}{2n}; \E\left(\frac{h''(S_{n,n})}{2n}\right) + \frac{\varepsilon}{2n} \right].
 $$
 В силу того, что аналогичное диапазон верен для $\E h(Z_{n,n-1}) - \E h(S_{n,n})$, получаем 
 $$
