--- a/docs/clt_by_swapping.qmd
+++ b/docs/clt_by_swapping.qmd
@@ -225,7 +225,7 @@ $$
 $$
 h(Z_{n,n}) - h(S_{n,n}) = h'(S_{n,n})X_n + \frac{h''(C)}{2!}X_n^2.
 $$
-Прибавим и вычтем справа $h''(S_{n,n})$,
+Прибавим и вычтем справа в числителе $h''(S_{n,n})$,
 $$
 h(Z_{n,n}) - h(S_{n,n}) = h'(S_{n,n})X_n + \frac{h''(S_{n,n})}{2!}X_n^2 + \frac{h''(C) - h''(S_{n,n})}{2!}X_n^2.
 $$
@@ -263,14 +263,14 @@ $$
 $$
 \E h(Z_{n,n}) - \E h(S_{n,n}) \in \left[ \E\left(\frac{h''(S_{n,n})}{2n}\right) - \frac{\varepsilon}{2n}; \E\left(\frac{h''(S_{n,n})}{2n}\right) + \frac{\varepsilon}{2n} \right].
 $$
-В силу того, что аналогичное диапазон верен для $\E h(Z_{n,n-1}) - \E h(S_{n,n})$, получаем 
+В этот же диапазон попадает и величина $\E h(Z_{n,n-1}) - \E h(S_{n,n})$, поэтому 
 $$
 \E h(Z_{n,n}) - \E h(Z_{n,n-1}) \in \left[ - \frac{\varepsilon}{n}; + \frac{\varepsilon}{n} \right].
 $$
 
 ## Взгляд назад
 
-Вспомним наш долгий путь. Сначала мы разбили разницу $h(Z_{n,n}) - h(Z_{n,0})$ на $2n$ полушагов. Каждый шаг состоит из полушага удаления $X_i$ и полушага добавления $Y_i$. Затем мы рассмотрели для полушага два подслучая, в зависимости от того, что больше $\abs X_i$ или $\delta$. 
+Вспомним наш долгий путь. Сначала мы разбили разницу $\E h(Z_{n,n}) - \E h(Z_{n,0})$ на $2n$ полушагов. Каждый шаг состоит из полушага удаления $X_i$ и полушага добавления $Y_i$. Изменение $\E h$, вызванное каждым шагом, состоит из разницы изменений вызванных полушагами. А изменение от каждого полушага при больших $n$ не отличается от общей константы более чем на $\varepsilon/2n$. Поэтому каждый шаг даёт изменение не больше $\varepsilon/n$, и вся разница $\E h(Z_{n,n}) - \E h(Z_{n,0})$ начиная с некоторого момента меньше $\varepsilon$. 
 
 
 :::{.callout-caution collapse="true"}
